Code2Xml.Core.Tests/Generators/ANTLRv3/LuaParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.5.0.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.5.0.2 Lua.g 2014-10-29 10:02:59

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  Code2Xml.Languages.ANTLRv3.Processors.Lua 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.5.0.2")]
[System.CLSCompliant(false)]
public partial class LuaParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "CHARSTRING", "COMMENT", "DecimalEscape", "Digit", "EscapeSequence", "ExponentPart", "FLOAT", "HEX", "HEX_FLOAT", "HexDigit", "HexEscape", "HexExponentPart", "INT", "LINE_COMMENT", "LONGSTRING", "NAME", "NORMALSTRING", "SHEBANG", "WS", "'#'", "'%'", "'('", "')'", "'*'", "'+'", "','", "'-'", "'.'", "'..'", "'...'", "'/'", "':'", "'::'", "';'", "'<'", "'<='", "'='", "'=='", "'>'", "'>='", "'['", "']'", "'^'", "'and'", "'break'", "'do'", "'else'", "'elseif'", "'end'", "'false'", "'for'", "'function'", "'goto'", "'if'", "'in'", "'local'", "'nil'", "'not'", "'or'", "'repeat'", "'return'", "'then'", "'true'", "'until'", "'while'", "'{'", "'}'", "'~='"
	};
	public const int EOF=-1;
	public const int CHARSTRING=4;
	public const int COMMENT=5;
	public const int DecimalEscape=6;
	public const int Digit=7;
	public const int EscapeSequence=8;
	public const int ExponentPart=9;
	public const int FLOAT=10;
	public const int HEX=11;
	public const int HEX_FLOAT=12;
	public const int HexDigit=13;
	public const int HexEscape=14;
	public const int HexExponentPart=15;
	public const int INT=16;
	public const int LINE_COMMENT=17;
	public const int LONGSTRING=18;
	public const int NAME=19;
	public const int NORMALSTRING=20;
	public const int SHEBANG=21;
	public const int WS=22;
	public const int T__23=23;
	public const int T__24=24;
	public const int T__25=25;
	public const int T__26=26;
	public const int T__27=27;
	public const int T__28=28;
	public const int T__29=29;
	public const int T__30=30;
	public const int T__31=31;
	public const int T__32=32;
	public const int T__33=33;
	public const int T__34=34;
	public const int T__35=35;
	public const int T__36=36;
	public const int T__37=37;
	public const int T__38=38;
	public const int T__39=39;
	public const int T__40=40;
	public const int T__41=41;
	public const int T__42=42;
	public const int T__43=43;
	public const int T__44=44;
	public const int T__45=45;
	public const int T__46=46;
	public const int T__47=47;
	public const int T__48=48;
	public const int T__49=49;
	public const int T__50=50;
	public const int T__51=51;
	public const int T__52=52;
	public const int T__53=53;
	public const int T__54=54;
	public const int T__55=55;
	public const int T__56=56;
	public const int T__57=57;
	public const int T__58=58;
	public const int T__59=59;
	public const int T__60=60;
	public const int T__61=61;
	public const int T__62=62;
	public const int T__63=63;
	public const int T__64=64;
	public const int T__65=65;
	public const int T__66=66;
	public const int T__67=67;
	public const int T__68=68;
	public const int T__69=69;
	public const int T__70=70;
	public const int T__71=71;

	public LuaParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public LuaParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		this.state.ruleMemo = new System.Collections.Generic.Dictionary<int, int>[106+1];


		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return LuaParser.tokenNames; } }
	public override string GrammarFileName { get { return "Lua.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_chunk();
	partial void LeaveRule_chunk();
	// $ANTLR start "chunk"
	// Lua.g:56:1: public chunk : block ;
	[GrammarRule("chunk")]
	public AstParserRuleReturnScope<object, IToken> chunk()
	{
		EnterRule_chunk();
		EnterRule("chunk", 1);
		TraceIn("chunk", 1);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);
		int chunk_StartIndex = input.Index;

		object root_0 = default(object);

		AstParserRuleReturnScope<object, IToken> block1 = default(AstParserRuleReturnScope<object, IToken>);

		try { DebugEnterRule(GrammarFileName, "chunk");
		DebugLocation(56, 4);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 1)) { return retval; }

			// Lua.g:57:5: ( block )
			DebugEnterAlt(1);
			// Lua.g:57:7: block
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(57, 7);
			PushFollow(Follow._block_in_chunk77);
			block1=block();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, block1.Tree);

			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("chunk", 1);
			LeaveRule("chunk", 1);
			LeaveRule_chunk();
			if (state.backtracking > 0) { Memoize(input, 1, chunk_StartIndex); }

		}
		DebugLocation(58, 4);
		} finally { DebugExitRule(GrammarFileName, "chunk"); }
		return retval;

	}
	// $ANTLR end "chunk"

	partial void EnterRule_block();
	partial void LeaveRule_block();
	// $ANTLR start "block"
	// Lua.g:60:1: block : ( stat )* ( retstat )? ;
	[GrammarRule("block")]
	private AstParserRuleReturnScope<object, IToken> block()
	{
		EnterRule_block();
		EnterRule("block", 2);
		TraceIn("block", 2);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);
		int block_StartIndex = input.Index;

		object root_0 = default(object);

		AstParserRuleReturnScope<object, IToken> stat2 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> retstat3 = default(AstParserRuleReturnScope<object, IToken>);

		try { DebugEnterRule(GrammarFileName, "block");
		DebugLocation(60, 4);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 2)) { return retval; }

			// Lua.g:61:5: ( ( stat )* ( retstat )? )
			DebugEnterAlt(1);
			// Lua.g:61:7: ( stat )* ( retstat )?
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(61, 7);
			// Lua.g:61:7: ( stat )*
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_1 = input.LA(1);

				if ((LA1_1==NAME||LA1_1==25||(LA1_1>=36 && LA1_1<=37)||(LA1_1>=48 && LA1_1<=49)||(LA1_1>=54 && LA1_1<=57)||LA1_1==59||LA1_1==63||LA1_1==68))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch ( alt1 )
				{
				case 1:
					DebugEnterAlt(1);
					// Lua.g:61:7: stat
					{
					DebugLocation(61, 7);
					PushFollow(Follow._stat_in_block94);
					stat2=stat();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) adaptor.AddChild(root_0, stat2.Tree);

					}
					break;

				default:
					goto loop1;
				}
			}

			loop1:
				;

			} finally { DebugExitSubRule(1); }

			DebugLocation(61, 13);
			// Lua.g:61:13: ( retstat )?
			int alt2=2;
			try { DebugEnterSubRule(2);
			try { DebugEnterDecision(2, false);
			int LA2_1 = input.LA(1);

			if ((LA2_1==64))
			{
				alt2 = 1;
			}
			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// Lua.g:61:13: retstat
				{
				DebugLocation(61, 13);
				PushFollow(Follow._retstat_in_block97);
				retstat3=retstat();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, retstat3.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(2); }


			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("block", 2);
			LeaveRule("block", 2);
			LeaveRule_block();
			if (state.backtracking > 0) { Memoize(input, 2, block_StartIndex); }

		}
		DebugLocation(62, 4);
		} finally { DebugExitRule(GrammarFileName, "block"); }
		return retval;

	}
	// $ANTLR end "block"

	partial void EnterRule_stat();
	partial void LeaveRule_stat();
	// $ANTLR start "stat"
	// Lua.g:64:1: stat : ( ';' | varlist '=' explist | functioncall | label | 'break' | 'goto' NAME | 'do' block 'end' | 'while' exp 'do' block 'end' | 'repeat' block 'until' exp | 'if' exp 'then' block ( 'elseif' exp 'then' block )* ( 'else' block )? 'end' | 'for' NAME '=' exp ',' exp ( ',' exp )? 'do' block 'end' | 'for' namelist 'in' explist 'do' block 'end' | 'function' funcname funcbody | 'local' 'function' NAME funcbody | 'local' namelist ( '=' explist )? );
	[GrammarRule("stat")]
	private AstParserRuleReturnScope<object, IToken> stat()
	{
		EnterRule_stat();
		EnterRule("stat", 3);
		TraceIn("stat", 3);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);
		int stat_StartIndex = input.Index;

		object root_0 = default(object);

		IToken char_literal4 = default(IToken);
		IToken char_literal6 = default(IToken);
		IToken string_literal10 = default(IToken);
		IToken string_literal11 = default(IToken);
		IToken NAME12 = default(IToken);
		IToken string_literal13 = default(IToken);
		IToken string_literal15 = default(IToken);
		IToken string_literal16 = default(IToken);
		IToken string_literal18 = default(IToken);
		IToken string_literal20 = default(IToken);
		IToken string_literal21 = default(IToken);
		IToken string_literal23 = default(IToken);
		IToken string_literal25 = default(IToken);
		IToken string_literal27 = default(IToken);
		IToken string_literal29 = default(IToken);
		IToken string_literal31 = default(IToken);
		IToken string_literal33 = default(IToken);
		IToken string_literal35 = default(IToken);
		IToken string_literal36 = default(IToken);
		IToken NAME37 = default(IToken);
		IToken char_literal38 = default(IToken);
		IToken char_literal40 = default(IToken);
		IToken char_literal42 = default(IToken);
		IToken string_literal44 = default(IToken);
		IToken string_literal46 = default(IToken);
		IToken string_literal47 = default(IToken);
		IToken string_literal49 = default(IToken);
		IToken string_literal51 = default(IToken);
		IToken string_literal53 = default(IToken);
		IToken string_literal54 = default(IToken);
		IToken string_literal57 = default(IToken);
		IToken string_literal58 = default(IToken);
		IToken NAME59 = default(IToken);
		IToken string_literal61 = default(IToken);
		IToken char_literal63 = default(IToken);
		AstParserRuleReturnScope<object, IToken> varlist5 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> explist7 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> functioncall8 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> label9 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> block14 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> exp17 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> block19 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> block22 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> exp24 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> exp26 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> block28 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> exp30 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> block32 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> block34 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> exp39 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> exp41 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> exp43 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> block45 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> namelist48 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> explist50 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> block52 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> funcname55 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> funcbody56 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> funcbody60 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> namelist62 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> explist64 = default(AstParserRuleReturnScope<object, IToken>);

		object char_literal4_tree = default(object);
		object char_literal6_tree = default(object);
		object string_literal10_tree = default(object);
		object string_literal11_tree = default(object);
		object NAME12_tree = default(object);
		object string_literal13_tree = default(object);
		object string_literal15_tree = default(object);
		object string_literal16_tree = default(object);
		object string_literal18_tree = default(object);
		object string_literal20_tree = default(object);
		object string_literal21_tree = default(object);
		object string_literal23_tree = default(object);
		object string_literal25_tree = default(object);
		object string_literal27_tree = default(object);
		object string_literal29_tree = default(object);
		object string_literal31_tree = default(object);
		object string_literal33_tree = default(object);
		object string_literal35_tree = default(object);
		object string_literal36_tree = default(object);
		object NAME37_tree = default(object);
		object char_literal38_tree = default(object);
		object char_literal40_tree = default(object);
		object char_literal42_tree = default(object);
		object string_literal44_tree = default(object);
		object string_literal46_tree = default(object);
		object string_literal47_tree = default(object);
		object string_literal49_tree = default(object);
		object string_literal51_tree = default(object);
		object string_literal53_tree = default(object);
		object string_literal54_tree = default(object);
		object string_literal57_tree = default(object);
		object string_literal58_tree = default(object);
		object NAME59_tree = default(object);
		object string_literal61_tree = default(object);
		object char_literal63_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "stat");
		DebugLocation(64, 4);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 3)) { return retval; }

			// Lua.g:65:5: ( ';' | varlist '=' explist | functioncall | label | 'break' | 'goto' NAME | 'do' block 'end' | 'while' exp 'do' block 'end' | 'repeat' block 'until' exp | 'if' exp 'then' block ( 'elseif' exp 'then' block )* ( 'else' block )? 'end' | 'for' NAME '=' exp ',' exp ( ',' exp )? 'do' block 'end' | 'for' namelist 'in' explist 'do' block 'end' | 'function' funcname funcbody | 'local' 'function' NAME funcbody | 'local' namelist ( '=' explist )? )
			int alt7=15;
			try { DebugEnterDecision(7, false);
			switch (input.LA(1))
			{
			case 37:
				{
				alt7 = 1;
				}
				break;
			case NAME:
				{
				int LA7_2 = input.LA(2);

				if ((EvaluatePredicate(synpred4_Lua_fragment)))
				{
					alt7 = 2;
				}
				else if ((EvaluatePredicate(synpred5_Lua_fragment)))
				{
					alt7 = 3;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 7, 2, input, 2);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case 25:
				{
				int LA7_2 = input.LA(2);

				if ((EvaluatePredicate(synpred4_Lua_fragment)))
				{
					alt7 = 2;
				}
				else if ((EvaluatePredicate(synpred5_Lua_fragment)))
				{
					alt7 = 3;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 7, 3, input, 2);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case 36:
				{
				alt7 = 4;
				}
				break;
			case 48:
				{
				alt7 = 5;
				}
				break;
			case 56:
				{
				alt7 = 6;
				}
				break;
			case 49:
				{
				alt7 = 7;
				}
				break;
			case 68:
				{
				alt7 = 8;
				}
				break;
			case 63:
				{
				alt7 = 9;
				}
				break;
			case 57:
				{
				alt7 = 10;
				}
				break;
			case 54:
				{
				int LA7_2 = input.LA(2);

				if ((EvaluatePredicate(synpred16_Lua_fragment)))
				{
					alt7 = 11;
				}
				else if ((EvaluatePredicate(synpred17_Lua_fragment)))
				{
					alt7 = 12;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 7, 11, input, 2);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case 55:
				{
				alt7 = 13;
				}
				break;
			case 59:
				{
				int LA7_2 = input.LA(2);

				if ((EvaluatePredicate(synpred19_Lua_fragment)))
				{
					alt7 = 14;
				}
				else if ((true))
				{
					alt7 = 15;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 7, 13, input, 2);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			default:
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 7, 0, input, 1);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}

			} finally { DebugExitDecision(7); }
			switch (alt7)
			{
			case 1:
				DebugEnterAlt(1);
				// Lua.g:65:7: ';'
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(65, 7);
				char_literal4=(IToken)Match(input,37,Follow._37_in_stat115); if (state.failed) return retval;
				if (state.backtracking == 0) {
				char_literal4_tree = (object)adaptor.Create(char_literal4);
				adaptor.AddChild(root_0, char_literal4_tree);
				}

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// Lua.g:66:7: varlist '=' explist
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(66, 7);
				PushFollow(Follow._varlist_in_stat123);
				varlist5=varlist();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, varlist5.Tree);
				DebugLocation(66, 15);
				char_literal6=(IToken)Match(input,40,Follow._40_in_stat125); if (state.failed) return retval;
				if (state.backtracking == 0) {
				char_literal6_tree = (object)adaptor.Create(char_literal6);
				adaptor.AddChild(root_0, char_literal6_tree);
				}
				DebugLocation(66, 19);
				PushFollow(Follow._explist_in_stat127);
				explist7=explist();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, explist7.Tree);

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// Lua.g:67:7: functioncall
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(67, 7);
				PushFollow(Follow._functioncall_in_stat135);
				functioncall8=functioncall();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, functioncall8.Tree);

				}
				break;
			case 4:
				DebugEnterAlt(4);
				// Lua.g:68:7: label
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(68, 7);
				PushFollow(Follow._label_in_stat143);
				label9=label();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, label9.Tree);

				}
				break;
			case 5:
				DebugEnterAlt(5);
				// Lua.g:69:7: 'break'
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(69, 7);
				string_literal10=(IToken)Match(input,48,Follow._48_in_stat151); if (state.failed) return retval;
				if (state.backtracking == 0) {
				string_literal10_tree = (object)adaptor.Create(string_literal10);
				adaptor.AddChild(root_0, string_literal10_tree);
				}

				}
				break;
			case 6:
				DebugEnterAlt(6);
				// Lua.g:70:7: 'goto' NAME
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(70, 7);
				string_literal11=(IToken)Match(input,56,Follow._56_in_stat159); if (state.failed) return retval;
				if (state.backtracking == 0) {
				string_literal11_tree = (object)adaptor.Create(string_literal11);
				adaptor.AddChild(root_0, string_literal11_tree);
				}
				DebugLocation(70, 14);
				NAME12=(IToken)Match(input,NAME,Follow._NAME_in_stat161); if (state.failed) return retval;
				if (state.backtracking == 0) {
				NAME12_tree = (object)adaptor.Create(NAME12);
				adaptor.AddChild(root_0, NAME12_tree);
				}

				}
				break;
			case 7:
				DebugEnterAlt(7);
				// Lua.g:71:7: 'do' block 'end'
				{
				root_0 = (object)adaptor.Nil();
